Refactor: Arrays.asList, Collections.* -> List.of
Unification + Migrate to a more beautiful Java 9 API

GitOrigin-RevId: a4bd19f0b89741dcfaaa42bfc5be04ecbec7ad74